--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 .vs/421_Jail/v16/Server/sqlite3/storage.ide
 .vs/421_Jail/v16/Server/sqlite3/storage.ide-shm
 .vs/421_Jail/v16/Server/sqlite3/storage.ide-wal
+.vs/421_Jail/v15/.suo
+.vs/421_Jail/v15/Server/sqlite3/storage.ide
+.vs/421_Jail/v15/Server/sqlite3/storage.ide-shm
+.vs/421_Jail/v15/Server/sqlite3/storage.ide-wal
