--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,15 @@
 .vs/421_Jail/v15/Server/sqlite3/storage.ide
 .vs/421_Jail/v15/Server/sqlite3/storage.ide-shm
 .vs/421_Jail/v15/Server/sqlite3/storage.ide-wal
+421_Jail/bin/Debug/421_Jail.exe
+421_Jail/obj/Debug/421_Jail.csproj.FileListAbsolute.txt
+421_Jail/obj/Debug/421_Jail.csproj.GenerateResource.cache
+*.cache
+421_Jail/obj/Debug/421_Jail.exe
+421_Jail/obj/Debug/421_Jail.pdb
+421_Jail/obj/Debug/_421_Jail.Block.resources
+UpgradeLog.htm
+421_Jail/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+421_Jail/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+421_Jail/obj/Debug/421_Jail.pdb
+421_Jail/obj/Debug/421_Jail.exe
