--- a/421_Jail/421_Jail.csproj
+++ b/421_Jail/421_Jail.csproj
@@ -50,6 +50,13 @@
     <Compile Include="Block.Designer.cs">
       <DependentUpon>Block.cs</DependentUpon>
     </Compile>
+    <Compile Include="CrimeIDForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CrimeIDForm.Designer.cs">
+      <DependentUpon>CrimeIDForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CrimeIDQueries.cs" />
     <Compile Include="Employee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,11 +75,15 @@
     <Compile Include="Inmate.Designer.cs">
       <DependentUpon>Inmate.cs</DependentUpon>
     </Compile>
+    <Compile Include="InmateQueries.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries.cs" />
     <EmbeddedResource Include="Block.resx">
       <DependentUpon>Block.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CrimeIDForm.resx">
+      <DependentUpon>CrimeIDForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Employee.resx">
       <DependentUpon>Employee.cs</DependentUpon>
