--- a/421_Jail/421_Jail.csproj
+++ b/421_Jail/421_Jail.csproj
@@ -50,6 +50,12 @@
     <Compile Include="Block.Designer.cs">
       <DependentUpon>Block.cs</DependentUpon>
     </Compile>
+    <Compile Include="Crime.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Crime.Designer.cs">
+      <DependentUpon>Crime.cs</DependentUpon>
+    </Compile>
     <Compile Include="CrimeIDForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <Compile Include="Queries.cs" />
     <EmbeddedResource Include="Block.resx">
       <DependentUpon>Block.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Crime.resx">
+      <DependentUpon>Crime.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CrimeIDForm.resx">
       <DependentUpon>CrimeIDForm.cs</DependentUpon>
